--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.ts"
+    "start": "nodemon ./src/index.ts",
+    "start2": "nodemon ./src/index2.ts",
+    "start3": "nodemon ./src/index3.ts",
+    "start4": "nodemon ./src/index4.ts"
+
   },
   "keywords": [],
   "author": "",
